# shove

./: CMakeLists.txt  README.md
include/containers/: allocator_adaptor.hpp  allocator_aware_container.hpp  buffer.hpp  container_schema.hpp  devector.hpp  geometric.hpp  geometric_list.hpp  polymorph.hpp  stable_iterator.hpp  unstable_deque.hpp
include/incomplete/shv/: singleton.hpp  singleton.hpp.md
include/incomplete/shv/container/: geometric_list.hpp  integer_search_tree.hpp
include/incomplete/shv/container/collection/: notes2
include/incomplete/shv/container/geometric/: list.hpp
include/incomplete/shv/container/geometric/doc/: geometric_list_theory.py  geometric_list_theory2.py  uint.py
include/incomplete/shv/container/geometric/legacy/: notes.md
include/incomplete/shv/container/geometric/src/: block_set.hpp  find_block.hpp  list_iterator_stubs.hpp  list_stubs.hpp  mask.hpp
include/incomplete/shv/container/geometric/src/find_blocks/: base.hpp  lg_comparator.hpp  naive.hpp  permuted.hpp
include/incomplete/shv/container/legacy/: geometric.hpp
include/incomplete/shv/iterator/: forwarding_iterator.hpp  function_range
include/incomplete/shv/meta/: class_wrapper.hpp
include/incomplete/shv/threading/: exclusive.hpp  lightweight_thread.hpp  task_pool.hpp
include/shove/container/: geometric.hpp  shared_queue.hpp
include/shove/container/collection/: notes
include/shv/container/: allocator_adaptor.hpp  allocator_aware_container.hpp  buffer.hpp  disjoint_set.hpp
include/shv/containers/: polymorph.hpp
include/shv/iterator/: generator.hpp
include/shv/meta/: min_int.hpp  optional.hpp  static_for.hpp  static_type_info.hpp  type_enum.hpp
include/shv/threading/: thread_pool.hpp
include/simd/: stdsimd_utils.hpp
include/threading/: thread_pool.hpp  threadsafe_prng.hpp  true_atomic.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  allocator_aware_container_test.cpp  generator_test.cpp  geometric_list_benchmark.cpp  geometric_list_test.cpp  geometric_list_theory.py  geometric_list_theory2.py  mask.py  metamask.py  mini_hive.hpp  polymorph.cpp  polymorph_test.cpp
