
add_executable(polymorph_test polymorph_test.cpp)
target_link_libraries(polymorph_test PRIVATE shove_experimental)

add_executable(allocator_aware_container_test allocator_aware_container_test.cpp)
target_link_libraries(allocator_aware_container_test PRIVATE shove_experimental)

add_executable(geometric_list_test geometric_list_test.cpp)
target_link_libraries(geometric_list_test PRIVATE shove_experimental)

add_executable(geometric_list_benchmark geometric_list_benchmark.cpp)
target_link_libraries(geometric_list_benchmark PRIVATE shove_experimental)
